@@ -33,6 +33,8 @@ void Filters::init() {
 	list["gradfun"] = Filter(tr("gradfun"), "gradfun");
 	list["denoise_normal"] = Filter(tr("normal denoise"), "hqdn3d");
 	list["denoise_soft"] = Filter(tr("soft denoise"), "hqdn3d", "2:1:2");
+	list["blur"] = Filter(tr("blur"), "unsharp", "lc:-1.5");
+	list["sharpen"] = Filter(tr("sharpen"), "unsharp", "lc:1.5");
 
 	// Audio
 	list["volnorm"] = Filter(tr("volume normalization"), "volnorm", "1");
